--- a/index.html
+++ b/index.html
@@ -21,16 +21,23 @@
     </div>
 
     <div class="searchTable">
-        <div class="header">
-            <h1>Search</h1>
-        </div>
-        <div class="searchbar">
-            <input type="text" id="search-input" placeholder="Search...">
-            <a href="#">
-                <img src="https://static.thenounproject.com/png/130268-200.png" alt="Button"/>
-            </a>
+        <div class="searchArea">
+            <div class="header">
+                <h1>Search</h1>
+            </div>
+            <div class="searchbar">
+                <input type="text" id="search-input" placeholder="Search...">
+                <div class="removeSearch">
+                    <a href="#">
+                        <img src="https://static.thenounproject.com/png/130268-200.png" alt="Button"/>
+                    </a>
+                </div>
+
+            </div>
+            </div>
         </div>
     </div>
+
 
     <script src="sidebar.js"></script>
 </body>
