--- a/index.html
+++ b/index.html
@@ -47,19 +47,36 @@
                         Profile Name
                     </div>
                     <div class="profileButton">
-                        <a href="profile.html"><img src="https://wallpapers.com/images/hd/cool-profile-picture-87h46gcobjl5e4xu.jpg"></a>
+                        <a href="profile.html">
+                            <img src="https://wallpapers.com/images/hd/cool-profile-picture-87h46gcobjl5e4xu.jpg">
+                        </a>
                     </div>
                 </div>
                 <img src="https://staticg.sportskeeda.com/editor/2022/10/1ee6d-16658333013660-1920.jpg" alt="User X's photo">
-            </div>
-            <!-- Test Video-->
-            <div class="feed-item">
-                <p>Userprofile goes here</p>
-                <video controls>
-                    <source src="https://youtu.be/cmFUnETleLU" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+                <div class="postInteraction">
+                    <div class="postAck">
+                        <div class="postAckIcons">
+                            <div class="postLike" role="button" tabindex="0">
+                                <svg class="heartIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path class="heartPath" d="M34.6 3.1c-4.5 0-7.9 1.8-10.6 5.6-2.7-3.7-6.1-5.5-10.6-5.5C6 3.1 0 9.6 0 17.6c0 7.3 5.4 12 10.6 16.5.6.5 1.3 1.1 1.9 1.7l2.3 2c4.4 3.9 6.6 5.9 7.6 6.5.5.3 1.1.5 1.6.5s1.1-.2 1.6-.5c1-.6 2.8-2.2 7.8-6.8l2-1.8c.7-.6 1.3-1.2 2-1.7C42.7 29.6 48 25 48 17.6c0-8-6-14.5-13.4-14.5z"/>
+                                </svg>                                                    
+                            </div>
+                            <div class="postComment">
+                                <svg class="commentIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path class="commentPath" d="M20.656 17.008a9.993 9.993 0 1 0-3.59 3.615L22 22Z"></path>
+                                </svg>
+                            </div>
+                            <div class="postShare">
+                                <svg class="shareIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <line x1="22" x2="9.218" y1="3" y2="10.083"></line>
+                                    <polygon points="11.698 20.334 22 3.001 2 3.001 9.218 10.084 11.698 20.334"></polygon>
+                                </svg>    
+                            </div>
+                        
+                        </div>
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
 
