Fixed hovering over postInteractions

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="sideBar">
         <ul>
-            <li id="SideBarTextLogo" class="logo"><a href="#">Swayy</a></li>
-            <li class="SideBarOptions"><i class="fas fa-home symbol"></i><a href="#">Home</a></li>
+            <li id="SideBarTextLogo" class="logo"><a href="index.html">Swayy</a></li>
+            <li class="SideBarOptions"><i class="fas fa-home symbol"></i><a href="index.html">Home</a></li>
             <li id="searchOption" class="SideBarOptions"><i class="fas fa-search symbol"></i><a href="#">Search</a></li>
             <li class="SideBarOptions"><i class="fas fa-globe symbol"></i><a href="#">Discover</a></li>
             <li class="SideBarOptions"><i class="fas fa-feather-pointed symbol"></i><a href="#">Spirits</a></li>
